DBZ-7996 Add AbstractChangeEventSink with shared logic for JDBC sink and MongoDB sink connectors ptX
closes to https://issues.redhat.com/browse/DBZ-7996